syntax = "proto3";

// 包名称
package oauth2Gprc;

// 定义一个服务
service Oauth2Service {
  rpc verifyToken (Token) returns (User);
  rpc verifyAuthCode (AuthInfo) returns (TokenInfo);
  rpc refreshToken (TokenInfo) returns (TokenInfo);
  rpc logout (TokenInfo) returns (LogoutRes);
}

message Token {
  string token = 1;
}

message User {
  int32 id = 1;
  string name = 2;
}

message AuthInfo {
  string client_id = 1;
  string client_secret = 2;
  string code = 3;
}

message TokenInfo {
  string access_token = 1;
  string refresh_token = 2;
  // string 
}

message LogoutRes {
  string message = 1;
}
